# krb-ccn

./: .gitignore  README.md
ccn/: CMakeLists.txt  README.md  README.md~  athena_keygen.c  ccnxKRB_Common.c  ccnxKRB_Common.h  ccnxKRB_Stats.c  ccnxKRB_Stats.h  ccnxVPN_Common.c  ccnxVPN_Common.h  ccnxVPN_Stats.c  ccnxVPN_Stats.h  experiments.md  key.pub  key.sec  key.sym  keygen  setup_krbccn.sh~  test.p12
ccn/b/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  ccnxVPN_Client  ccnxVPN_Server  client.keystore  cmake.sh  cmake_install.cmake  commands_sheet.sh  commands_sheet.sh~  consumer_identity1  dropped.csv  keygen  producer_identity1  producer_identity2  server.keystore  setup_krbcnn.sh  throughput.csv
ccn/b/Testing/Temporary/: CTestCostData.txt  LastTest.log~
ccn/b/gateway/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
ccn/ccvpn_scripts/: .Rhistory  1_1.sh  client.keystore  dropped.csv  experiments_clean.sh  setup_network.sh  start_consumers.sh  start_consumers_same_server.sh  times.csv
ccn/ccvpn_scripts/old scripts/: #manyclients_experiments.sh#  experiments.sh  manyclients_experiments_pk.sh  overhead_plots.py  thput_aggr.R
ccn/consumer/: ccnxKRB_Consumer.c  ccnxVPN_Consumer.c  ccnxVPN_Consumer.c~
ccn/examples/: AEAD.c  AEAD.c~  PKE.c  PKS.c  main
ccn/experiments/: .RData  .Rhistory  better_plots.R~  better_plots_red.R~  better_plots_yellow.R~  drop_red.R~  drop_yellow.R~  many_clients_plots.R~  many_clients_plots_red.R~  many_clients_plots_yellow.R~  medias_log.R~  n_n_thput.R~  net_thput.R~  net_thput_140.R~  plot_chris.sh~  plot_latest_result.sh~  plotly.R~  ultimate_plot.R~  ultimate_rtt_plot.R~  ultimate_throughput_plot.R~
ccn/experiments/1_1_results/public_key/: 0600_throughput_pk_.csv  2100_throughput_pk_.csv  3600_throughput_pk_.csv  3900_throughput_pk_.csv  4500_throughput_pk_.csv  4800_throughput_pk_.csv  5100_throughput_pk_.csv  5400_throughput_pk_.csv
ccn/experiments/1_1_results/symm_key/: 0600_throughput_sk_.csv  0900_throughput_sk_.csv  1800_throughput_sk_.csv  2100_throughput_sk_.csv  3000_throughput_sk_.csv  3900_throughput_sk_.csv  4800_throughput_sk_.csv  5100_throughput_sk_.csv  5700_throughput_sk_.csv
ccn/experiments/n_1_results/: n_1_thput.R
ccn/experiments/n_1_results/public_key/: 10_1_throughput_pk_.csv  60_1_throughput_pk_.csv  70_1_throughput_pk_.csv  80_1_throughput_pk_.csv  z100_1_throughput_pk_.csv
ccn/experiments/n_1_results/symm_key/: 30_1_throughput_sk_.csv  40_1_throughput_sk_.csv  60_1_throughput_sk_.csv  70_1_throughput_sk_.csv  (+2 more)
ccn/experiments/public_key/: 20_1_throughput_pk_.csv  30_1_throughput_pk_.csv  40_1_throughput_pk_.csv  50_1_throughput_pk_.csv  90_1_throughput_pk_.csv
ccn/experiments/symm_key/: 10_1_throughput_sk_.csv  20_1_throughput_sk_.csv  50_1_throughput_sk_.csv  z100_1_throughput_sk_.csv
ccn/experiments/times/: time_boxplots.R~  times.R~
ccn/gateway/: CMakeLists.txt
ccn/krb_results/rtt/: cgt_rtt.csv  krb_rtt.csv  plot.R  reg_rtt.csv  tgt_rtt.csv
ccn/krb_results/thput/: all_cached_thput.csv  no_cached_thput.csv  plot.R  reg_req_thput.csv  tgt_cached_thput.csv
ccn/krb_results/times/: 1-TGT_time.csv  2-CGT_time.csv  3-PROD_time.csv  times.R
ccn/krb_scripts/: .RData  CGT_time.csv  PROD_time.csv  TGT_time.csv  cgt_rtt.csv  consumer_identity1  dropped.csv  experiments_clean.sh  krb_rtt.csv  producer_identity1  reg_rtt.csv  rtt_test.sh  rtt_test_simple.sh  run_client.sh  setup_network.sh  tgt_rtt.csv  tgt_thput.csv  thput_test.sh  throughput.csv  timing.sh
ccn/paper/: .gitignore  01-introduction.tex  01-introduction.tex.backup  02-overview.tex  03-related.tex  04-design.tex  04-design.tex.backup  04-design.tex~  05-sec-analysis.tex  05-sec-analysis.tex.backup  05-sec-analysis.tex~  06-perf-analysis.tex  06-perf-analysis.tex~  07-experiment.tex  07-experiment.tex.backup  07-experiment.tex~  Makefile  ccvpn.blg  ccvpn.tex  ccvpn.tex~  references.bib  references.bib.backup
ccn/paper/images/: testnet.eps
ccn/producer/: ccnxKRB_Producer.c  ccnxVPN_Producer.c
ccn/scripts/: cont_decap_sk.csv  cont_encap_sk.csv  dropped.csv  int_decap_pk.csv  int_encap_pk.csv  manyclients_experiments.sh~  manyproducers_manyclients_experiments.sh  manyproducers_manyclients_experiments.sh~  run.sh~  run_clients.sh  run_clients.sh~  run_clients_many_servers.sh  run_clients_n_to_1.sh~  run_experiment1.sh~  run_gw.sh  run_gw.sh~  run_rates.sh  server.keystore  start_consumers.sh~  start_consumers_n_to_1.sh~  start_consumers_same_server.sh~  start_producers.sh~  thput_aggr.R~  throughput.csv  throughput.csv~  times.csv
ccn/scripts/old scripts/: #run_clients.sh#  #start_consumers.sh#  manyclients_experiments_140.sh  run_clients_n_to_1.sh  run_experiment1.sh  start_consumers_n_to_1.sh  throughput.R
(+402 files in other folders)
